# rustc_issue_report_58375

./: Cargo.toml  README.md  setup.py
src/: lib.rs  py_channel_id.rs
